--- a/package.json
+++ b/package.json
@@ -10,13 +10,19 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "axios": "^1.3.3",
+    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "colors": "^1.4.0",
+    "dotenv": "^16.0.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "recoil": "^0.7.6"
+    "react-toastify": "^9.1.1",
+    "recoil": "^0.7.6",
+    "swr": "^2.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
