--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "18.2.0",
     "react-toastify": "^9.1.1",
     "recoil": "^0.7.6",
-    "swr": "^2.0.3"
+    "swr": "^2.0.3",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
