--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "colors": "^1.4.0",
     "dotenv": "^16.0.3",
     "jsonwebtoken": "^9.0.0",
+    "mongodb": "^5.0.1",
     "mongoose": "^6.9.2",
     "next": "13.1.6",
     "react": "18.2.0",
